--- a/Thesis/uwthesis.cls
+++ b/Thesis/uwthesis.cls
@@ -632,12 +632,12 @@
 \def\School#1{\gdef\@School{#1}} \School{University of Washington}
 \def\GSchool#1{\gdef\@GSchool{#1}} \GSchool{Graduate School}
 \def\Degreetext#1{\gdef\@Degreetext{#1}} 
-  \Degreetext{A dissertation\\ submitted in partial fulfillment of the\\requirements for the degree of}
+  \Degreetext{A thesis\\ submitted in partial fulfillment of the\\requirements for the degree of}
 \def\Programtext#1{\gdef\@Programtext{#1}}  
        \Programtext{Program Authorized to Offer Degree: }
 
 \def\textofCommittee#1{\gdef\@textofCommittee{#1}}  
-       \textofCommittee{Reading Committee: }
+       \textofCommittee{Committee: }
 \def\textofDate#1{\gdef\@textofDate{#1}}  \textofDate{Date}
 
 \def\textofChair#1{\gdef\@textofChair{#1}}
